--- a/MPItheme/beamerthemeMPI.sty
+++ b/MPItheme/beamerthemeMPI.sty
@@ -13,36 +13,12 @@
 \usecolortheme{MPIGravMixed}
 
 
-% \setbeamertemplate{itemize item}{\textbullet}
-\setbeamertemplate{itemize item}{$\blacktriangleright$}
-\setbeamertemplate{itemize subitem}{--}
-\setbeamertemplate{itemize subsubitem}{\textbullet}
-\setlength{\leftmargini}{1.25em}
-\setlength{\leftmarginii}{1em}
-\setlength{\leftmarginiii}{1em}
-
-
-% \setbeamertemplate{items}[circle]
-% \setbeamercolor{itemize item}{fg=\chosencolor}
-% \setbeamercolor{itemize subitem}{fg=\chosencolor}
-
-% \setbeamertemplate{enumerate items}[circle]
-% \setbeamercolor{item projected}{fg=white,bg=\chosencolor}
-
-% \setbeamercolor{block title}{fg=white,bg=\chosencolor}
-% \setbeamerfont{block title}{series=\bfseries\small}
-% \setbeamercolor{block body}{fg=black,bg=gray!5}
-
-
-% \setbeamercolor{background canvas}{bg = \chosencolor}
-
-
 % -- Change spacing in document
 \fontdimen2\font=3pt % Increase space between words, found original one too small -> see https://tex.stackexchange.com/questions/23921/how-to-shorten-shrink-spaces-between-words. Has to be IN document for some reason
 \linespread{1.1} % Increase space between lines (found original one too small)
 
 
-% -- Following just copied to make stuff work
+% -- Following just copied to make stuff work for Berkeley theme
 \newcommand{\smallframetitle}{%
   % % \setbeamertemplate{frametitle}{\vskip0.15\paperheight\insertframetitle}
   % \setbeamertemplate{frametitle}{\vskip0.08\paperheight\insertframetitle}
