--- a/MPItheme/beamercolorthemeMPI.sty
+++ b/MPItheme/beamercolorthemeMPI.sty
@@ -1,3 +1,8 @@
+%% start of file `beamercolorthemeMPI.sty'.
+% Author: Max Melching (m-melching@web.de), 2025
+%
+% Acknowledgements: this theme is a based on the UC Berkeley beamer theme. The file structure, however, follows the DTU template from https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
+
 \usepackage{xcolor}
 
 \definecolor{MPIGreen}{HTML}{007977}
@@ -7,6 +12,7 @@
 
 \setbeamercolor{titlelike}{fg=MPIGreen,bg=MPIGreen!36}
 \setbeamercolor{headline}{fg=MPIGreen,bg=MPIGreen!36}
+\setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=MPIGreen,bg=white}
 
 \setbeamercolor{normal text}{fg=FontColor}
