Update on Overleaf.

--- a/MPItheme/beamercolorthemeMPI.sty
+++ b/MPItheme/beamercolorthemeMPI.sty
@@ -3,7 +3,7 @@
 %
 % Acknowledgements: this theme is a based on the UC Berkeley beamer theme. The file structure, however, follows the DTU template from https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
 
-\usepackage{xcolor}
+\RequirePackage{xcolor}
 
 \definecolor{MPIGreen}{HTML}{007977}
 \definecolor{MPIGravRed}{HTML}{ad0000}
@@ -24,3 +24,6 @@
 \setbeamercolor{itemize item}{fg=MPIGreen}
 \setbeamercolor{itemize subitem}{fg=MPIGreen}
 \setbeamercolor{itemize subsubitem}{fg=MPIGreen}
+
+\setbeamercolor{section page}{fg=MPIGreen, bg=MPIGreen!36}
+\setbeamercolor{subsection page}{fg=MPIGreen, bg=MPIGreen!36}
